# agentcore-mcp-proxy

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: ci.yml
demo/: Makefile
demo/fast-agent/: demo.py
demo/runtime_stateful/: Dockerfile
demo/runtime_stateless/: Dockerfile
install/: generate-buttons.py
install/vscode/: mcp.json
proxy/: README.md  pyproject.toml
proxy/src/mcp_agentcore_proxy/: cli.py
runtime_stateful/: Dockerfile  mcp_server.py
runtime_stateless/: Dockerfile  mcp_server.py
scripts/: proxy_smoketest.py
server/: Dockerfile  mcp_server.py  requirements.txt  utils.py
src/mcp_agentcore_proxy/: aws_session.py  cli.py  client.py  server.py  session_manager.py
tests/: test_aws_session.py
