[build-system]
requires = ["hatchling>=1.17.0"]
build-backend = "hatchling.build"

[project]
name = "mcp-agentcore-proxy"
version = "0.1.0"
description = "MCP STDIO proxy for Amazon Bedrock AgentCore Runtime"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alessandro Bologna", email = "alessandro.bologna@gmail.com" }]
maintainers = [{ name = "Alessandro Bologna", email = "alessandro.bologna@gmail.com" }]
license = { text = "MIT License" }
urls = {
  Repository = "https://github.com/alessandrobologna/agentcore-mcp-proxy"
}
dependencies = [
  "boto3>=1.34.135",
]

[project.scripts]
mcp-agentcore-proxy = "mcp_agentcore_proxy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_agentcore_proxy"]
